--- a/netball.html
+++ b/netball.html
@@ -12,6 +12,97 @@
       padding: 20px;
     }
     
+    #scrollTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 99;
+  width: 56px;
+  height: 56px;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+  transition: transform 0.2s, box-shadow 0.2s;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+#scrollTopBtn svg {
+  display: block;
+  width: 48px;
+  height: 48px;
+}
+#scrollTopBtn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 6px 24px rgba(0,0,0,0.28);
+}
+
+@media (max-width: 900px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 16px;
+  }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background: #222;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+    border-radius: 0 0 8px 8px;
+    z-index: 100;
+  }
+  .nav-links.show {
+    display: flex;
+  }
+  .nav-links li {
+    width: 100%;
+    text-align: left;
+    padding: 16px 24px;
+    border-bottom: 1px solid #333;
+  }
+  .nav-brand {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+  }
+  .hamburger span {
+    display: block;
+    height: 4px;
+    width: 28px;
+    background: #fff;
+    margin: 6px 0;
+    border-radius: 2px;
+    transition: 0.3s;
+  }
+}
+@media (min-width: 901px) {
+  .hamburger {
+    display: none;
+  }
+  .nav-links {
+    display: flex !important;
+    position: static;
+    flex-direction: row;
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
   </style>
 </head>
 <body>
@@ -47,7 +138,7 @@
     <li><a href="index.html" id="logoutLink">Logout</a></li>
   </ul> 
 </nav>
-<form action="https://formspree.io/f/mldnkkyg" method="POST">
+<form id="netballForm" action="https://formspree.io/f/mldnkkyg" method="POST">
   <h2>WSU Netball Team Registration</h2>
 
   <label for="fullname">Full Name <span class="required">*</span></label>
@@ -117,13 +208,13 @@
   <label for="conditionDetails">If yes, please explain</label>
   <input type="text" id="conditionDetails" name="conditionDetails">
 
-  <label for="emergencyContact">Emergency Contact Name</label>
+  <label for="emergencyContact">Emergency Contact Name<span class="required">*</span></label>
   <input type="text" id="emergencyContact" name="emergencyContact">
 
-  <label for="emergencyPhone">Emergency Contact Number</label>
+  <label for="emergencyPhone" >Emergency Contact Number<span class="required">*</span></label>
   <input type="text" id="emergencyPhone" name="emergencyPhone">
 
-  <label for="relationship">Relationship</label>
+  <label for="relationship">Relationship<span class="required">*</span></label>
   <input type="text" id="relationship" name="relationship">
 
   <label>
@@ -139,11 +230,43 @@
   <button type="submit">Submit Registration</button>
 </form>
 
+<!-- Scroll-to-Top Button -->
+<button id="scrollTopBtn" title="Go to top">
+  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="16" cy="16" r="16" fill="#333"/>
+    <path d="M16 10 L16 22" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+    <path d="M10 16 L16 10 L22 16" stroke="#fff" stroke-width="2" stroke-linecap="round" fill="none"/>
+  </svg>
+</button>
+<script>
+window.onscroll = function() {
+  const btn = document.getElementById("scrollTopBtn");
+  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+    btn.style.display = "flex";
+  } else {
+    btn.style.display = "none";
+  }
+};
+document.getElementById("scrollTopBtn").onclick = function() {
+  window.scrollTo({top: 0, behavior: 'smooth'});
+};
+
+function toggleMenu() {
+  const navLinks = document.getElementById("navLinks");
+  navLinks.classList.toggle("active");
+}
+const hamburger = document.querySelector('.hamburger');
+if (hamburger) {
+  hamburger.addEventListener('click', toggleMenu);
+}
+</script>
+
 <!-- Footer -->
   <footer>
     <p>&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
     <p>Developed to connect students with the Sports Department</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
   document.getElementById('logoutLink').addEventListener('click', function (event) {
     event.preventDefault();
@@ -152,6 +275,106 @@
       window.location.href = this.href;
     }
   });
+
+  // Supabase credentials {Initialize Supabase client}
+    const supabaseUrl = 'https://mqvjbgnipsjygmpwidnq.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1xdmpiZ25pcHNqeWdtcHdpZG5xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNDkyNzQsImV4cCI6MjA2NzcyNTI3NH0.p-mZxDCirt9NY_3taGk7_mL-qK5zTR05jInt6FEWs4Y';
+    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+
+  const form = document.getElementById("netballForm");
+const submitBtn = form.querySelector("button[type='submit']");
+
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const submitBtn = form.querySelector("button[type='submit']");
+  submitBtn.disabled = true;
+  submitBtn.textContent = "Submitting...";
+
+  try {
+    const formData = new FormData(form);
+    const fullname = formData.get("fullname").trim();
+    const studentNumber = formData.get("studentNumber").trim();
+    const dob = formData.get("dob");
+    const gender = formData.get("gender");
+    const contact = formData.get("contact").trim();
+    const email = formData.get("email").trim();
+    const year = formData.get("year");
+    const faculty = formData.get("faculty");
+    const experience = formData.get("experience");
+    const position = formData.get("position");
+    const height = formData.get("height");
+    const training = formData.get("training");
+    const medical = formData.get("medical");
+    const conditionDetails = formData.get("conditionDetails");
+    const emergencyContact = formData.get("emergencyContact");
+    const emergencyPhone = formData.get("emergencyPhone").trim();
+    const relationship = formData.get("relationship");
+    const agreement = formData.get("agreement");
+    const code = formData.get("code");
+
+    if (!/^[0-9]{9}$/.test(studentNumber)) {
+      alert("❌ Student number must be exactly 9 digits.");
+      submitBtn.disabled = false;
+      submitBtn.textContent = "Submit";
+      return;
+    }
+
+    const expectedEmail = `${studentNumber}@mywsu.ac.za`;
+    if (email.toLowerCase() !== expectedEmail.toLowerCase()) {
+      alert(`❌ Email must be: ${expectedEmail}`);
+      submitBtn.disabled = false;
+      submitBtn.textContent = "Submit";
+      return;
+    }
+
+    if (!/^(06|07|08)\d{8}$/.test(emergencyPhone)) {
+      alert("❌ Emergency contact number must start with 06, 07, or 08 and be 10 digits.");
+      submitBtn.disabled = false;
+      submitBtn.textContent = "Submit";
+      return;
+    }
+
+    const { error: insertError } = await supabase
+      .from("Netball_Registration")
+      .insert({
+        fullname,
+        studentNumber,
+        dob,
+        gender,
+        contact,
+        email,
+        year,
+        faculty,
+        experience,
+        position,
+        height,
+        training,
+        medical,
+        conditionDetails,
+        emergencyContact,
+        emergencyPhone,
+        relationship,
+        agreement: agreement ? true : false,
+        code: code ? true : false,
+      });
+
+    if (insertError) {
+      console.error("Insert error:", insertError);
+      alert("❌ Could not submit. Please check your info or try again later.");
+    } else {
+      alert("✅ Thank you for your application! We will get back to you as soon as we have the final decision on your application.");
+      form.reset();
+    }
+  } catch (err) {
+    console.error("Unexpected error:", err);
+    alert("Unexpected error: " + err.message);
+  }
+
+  submitBtn.disabled = false;
+  submitBtn.textContent = "Submit";
+});
 </script>
 </body>
 </html>
