--- a/football.html
+++ b/football.html
@@ -9,45 +9,71 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
-      background: #f5f5f5;
+      background: transparent !important;
+    }
+    #scrollTopBtn {
+      display: none;
+      position: fixed;
+      bottom: 40px;
+      right: 40px;
+      z-index: 99;
+      width: 56px;
+      height: 56px;
+      border: none;
+      outline: none;
+      background: none;
+      cursor: pointer;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+      transition: transform 0.2s, box-shadow 0.2s;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+    }
+    #scrollTopBtn svg {
+      display: block;
+      width: 48px;
+      height: 48px;
+    }
+    #scrollTopBtn:hover {
+      transform: scale(1.08);
+      box-shadow: 0 6px 24px rgba(0,0,0,0.28);
     }
   </style>
 </head>
 <body>
-   <nav class="navbar">
+<nav class="navbar">
   <div class="nav-brand">
     <a href="home.html">
       <img src="Images/images.jpeg" alt="WSU Logo" class="logo-img">
     </a>
     <div class="hamburger" onclick="toggleMenu()">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
-
-  
-   <ul class="nav-links" id="navLinks">
-     <li><a href="football.html">Football</a></li>
-      <li><a href="rugby.html">Rugby</a></li>
-      <li><a href="upcoming.html">Upcoming Matches</a></li>
-      <li id="dropdownWrapper" style="position: relative;">
-        <a href="#" id="dropdownLink">More ▾</a>
-        <ul class="dropdown" id="moreDropdown">
-          <li><a href="athletics.html">Athletics</a></li>
-          <li><a href="basketball.html">Basketball</a></li>
-          <li><a href="volleyball.html">Volleyball</a></li>
-          <li><a href="cricket.html">Cricket</a></li>
-          <li><a href="netball.html">Netball</a></li>
-        </ul>
-      </li>
+  <ul class="nav-links" id="navLinks">
+    <li><a href="football.html">Football</a></li>
+    <li><a href="rugby.html">Rugby</a></li>
+    <li><a href="upcoming.html">Upcoming Matches</a></li>
+    <li id="dropdownWrapper" style="position: relative;">
+      <a href="#" id="dropdownLink">More ▾</a>
+      <ul class="dropdown" id="moreDropdown">
+        <li><a href="athletics.html">Athletics</a></li>
+        <li><a href="basketball.html">Basketball</a></li>
+        <li><a href="volleyball.html">Volleyball</a></li>
+        <li><a href="cricket.html">Cricket</a></li>
+        <li><a href="netball.html">Netball</a></li>
+      </ul>
     </li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="index.html" id="logoutLink">Logout</a></li>
   </ul> 
 </nav>
 
-<form action="https://formspree.io/f/meokwwbk" method="POST">
+<form id="soccerForm" method="POST">
+  <h2>WSU Soccer Team Registration</h2>
+  <form id="soccerForm" method="POST" id="soccerForm">
   <h2>WSU Soccer Team Registration</h2>
 
   <label for="fullname">Full Name <span class="required">*</span></label>
@@ -140,27 +166,106 @@
   </label>
 
   <button type="submit">Submit Registration</button>
+  <div id="formFeedback" style="margin-top:16px; color:#d32f2f; font-weight:bold;"></div>
 </form>
+  
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script type="module">
 
-<!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
-    <p>Developed to connect students with the Sports Department</p>
-  </footer>
-  <script>
-    document.addEventListener('click', function (e) {
-    if (!dropdownWrapper.contains(e.target)) {
-      dropdownWrapper.classList.remove('active');
+  // Supabase credentials {Initialize Supabase client}
+    const supabaseUrl = 'https://mqvjbgnipsjygmpwidnq.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1xdmpiZ25pcHNqeWdtcHdpZG5xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNDkyNzQsImV4cCI6MjA2NzcyNTI3NH0.p-mZxDCirt9NY_3taGk7_mL-qK5zTR05jInt6FEWs4Y';
+    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+  const form = document.getElementById("soccerForm");
+  const submitBtn = form.querySelector("button[type='submit']");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    submitBtn.disabled = true;
+    submitBtn.textContent = "Submitting...";
+
+    const formData = new FormData(form);
+    const studentNumber = formData.get("studentNumber").trim();
+    const email = formData.get("email").trim();
+    const contact = formData.get("contact").trim();
+    const emergencyPhone = formData.get("emergencyPhone").trim();
+
+    try {
+      // Check for duplicates
+      const { data: existing, error: checkError } = await supabase
+        .from("football")
+        .select("id")
+        .or(`email.eq.${email},studentNumber.eq.${studentNumber}`);
+
+      if (checkError) {
+        console.error("Check error:", checkError);
+        alert("⚠️ Error checking existing entries.");
+        resetSubmitState();
+        return;
+      }
+
+      if (existing.length > 0) {
+        alert("❌ A user with this email or student number already exists.");
+        form.querySelector("#email").value = "";
+        form.querySelector("#studentNumber").value = "";
+        resetSubmitState();
+        return;
+      }
+
+      // Insert data
+      const { error: insertError } = await supabase
+        .from("football")
+        .insert({
+          fullname: formData.get("fullname"),
+          studentNumber,
+          dob: formData.get("dob"),
+          gender: formData.get("gender"),
+          contact,
+          email,
+          year: formData.get("year"),
+          faculty: formData.get("faculty"),
+          experience: formData.get("experience"),
+          previousTeam: formData.get("previousTeam"),
+          position: formData.get("position"),
+          injuries: formData.get("injuries"),
+          training: formData.get("training"),
+          medical: formData.get("medical"),
+          conditionDetails: formData.get("conditionDetails"),
+          emergencyContact: formData.get("emergencyContact"),
+          emergencyPhone,
+          relationship: formData.get("relationship"),
+          agreement: formData.get("agreement"),
+          code: formData.get("code"),
+        });
+
+      if (insertError) {
+        console.error("Insert error:", insertError);
+        alert("❌ Could not submit. Please try again.");
+      } else {
+        alert("✅ Thank you for your application! We will get back to you as soon as we have the final decision on your application.");
+        form.reset(); // Reset the full form
+      }
+    } catch (err) {
+      console.error("Unexpected error:", err);
+      alert("Unexpected error: " + err.message);
     }
+
+    resetSubmitState();
   });
 
-  document.getElementById('logoutLink').addEventListener('click', function (event) {
-    event.preventDefault();
-    const confirmed = confirm("Are you sure you want to logout?");
-    if (confirmed) {
-      window.location.href = this.href;
-    }
-  });
-  </script>
+  function resetSubmitState() {
+    submitBtn.disabled = false;
+    submitBtn.textContent = "Submit Registration";
+  }
+</script>
+
+</script>
+
+<footer>
+  <p>&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
+  <p>Developed to connect students with the Sports Department</p>
+</footer>
 </body>
 </html>
