--- a/cricket.html
+++ b/cricket.html
@@ -5,6 +5,7 @@
   <title>Cricket Team Registration Form</title>
   <link rel="stylesheet" href="Style.css">
   <link rel="stylesheet" href="home.css">
+  
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -12,6 +13,97 @@
       background: #eef2f3;
     }
     
+    #scrollTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 99;
+  width: 56px;
+  height: 56px;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+  transition: transform 0.2s, box-shadow 0.2s;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+#scrollTopBtn svg {
+  display: block;
+  width: 48px;
+  height: 48px;
+}
+#scrollTopBtn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 6px 24px rgba(0,0,0,0.28);
+}
+
+@media (max-width: 900px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 16px;
+  }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background: #222;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+    border-radius: 0 0 8px 8px;
+    z-index: 100;
+  }
+  .nav-links.show {
+    display: flex;
+  }
+  .nav-links li {
+    width: 100%;
+    text-align: left;
+    padding: 16px 24px;
+    border-bottom: 1px solid #333;
+  }
+  .nav-brand {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+  }
+  .hamburger span {
+    display: block;
+    height: 4px;
+    width: 28px;
+    background: #fff;
+    margin: 6px 0;
+    border-radius: 2px;
+    transition: 0.3s;
+  }
+}
+@media (min-width: 901px) {
+  .hamburger {
+    display: none;
+  }
+  .nav-links {
+    display: flex !important;
+    position: static;
+    flex-direction: row;
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
   </style>
 </head>
 <body>
@@ -49,34 +141,33 @@
   </ul> 
 </nav>
 
-<form action="https://formspree.io/f/xkgbaaap"
-  method="POST">
+<form id="cricketForm" action="https://formspree.io/f/mzzvglyb" method="POST">
   <h2>WSU Cricket Team Registration</h2>
 
-  <label for="fullname">Full Name</label>
+  <label for="fullname">Full Name & Surname<span style="color: red;">*</span></label>
   <input type="text" id="fullname" name="fullname" required>
 
-  <label for="studentNumber">Student Number</label>
+  <label for="studentNumber">Student Number <span style="color: red;">*</span></label>
   <input type="text" id="studentNumber" name="studentNumber" required>
 
-  <label for="dob">Date of Birth</label>
+  <label for="dob">Date of Birth <span style="color: red;">*</span></label>
   <input type="date" id="dob" name="dob" required>
 
-  <label>Gender</label>
+  <label>Gender <span style="color: red;">*</span></label>
   <div class="checkbox-group">
     <label><input type="radio" name="gender" value="Male" required> Male</label>
     <label><input type="radio" name="gender" value="Female"> Female</label>
     <label><input type="radio" name="gender" value="Other"> Other</label>
   </div>
 
-  <label for="contact">Contact Number</label>
+  <label for="contact">Contact Number <span style="color: red;">*</span></label>
   <input type="text" id="contact" name="contact" required>
 
-  <label for="email">Email Address</label>
+  <label for="email">Email Address <span style="color: red;">*</span></label>
   <input type="email" id="email" name="email" required>
 
-  <label for="year">Current Year of Study</label>
-  <select id="year" name="year">
+  <label for="year">Current Year of Study<span style="color: red;">*</span></label>
+  <select id="year" name="year" required>
     <option>1st</option>
     <option>2nd</option>
     <option>3rd</option>
@@ -87,7 +178,7 @@
   <label for="faculty">Faculty / Department</label>
   <input type="text" id="faculty" name="faculty">
 
-  <label>Have you played cricket before?</label>
+  <label>Have you played cricket before? <span style="color: red;">*</span></label>
   <div class="checkbox-group">
     <label><input type="radio" name="experience" value="Yes" required> Yes</label>
     <label><input type="radio" name="experience" value="No"> No</label>
@@ -126,7 +217,7 @@
   <label for="training">How often do you train/play cricket weekly?</label>
   <input type="text" id="training" name="training">
 
-  <label>Do you have any medical conditions?</label>
+  <label>Do you have any medical conditions? <span style="color: red;">*</span></label>
   <div class="checkbox-group">
     <label><input type="radio" name="medical" value="Yes" required> Yes</label>
     <label><input type="radio" name="medical" value="No"> No</label>
@@ -135,47 +226,164 @@
   <label for="conditionDetails">If yes, please explain</label>
   <input type="text" id="conditionDetails" name="conditionDetails">
 
-  <label for="emergencyContact">Emergency Contact Name</label>
-  <input type="text" id="emergencyContact" name="emergencyContact">
+  <label for="emergencyContact">Emergency Contact Name<span style="color: red;">*</span></label>
+  <input type="text" id="emergencyContact" name="emergencyContact" required>
 
-  <label for="emergencyPhone">Emergency Contact Number</label>
-  <input type="text" id="emergencyPhone" name="emergencyPhone">
+  <label for="emergencyContact">Emergency Contact Number<span style="color: red;">*</span></label>
+  <input type="text" id="emergencyPhone" name="emergencyPhone" required>
 
-  <label for="relationship">Relationship</label>
-  <input type="text" id="relationship" name="relationship">
+  <label for="relationship">Relationship<span style="color: red;">*</span></label>
+  <input type="text" id="relationship" name="relationship" required>
 
   <label>
     <input type="checkbox" name="agreement" required>
-    I confirm that the information above is accurate and I accept responsibility.
+    I confirm that the information above is accurate and I accept responsibility. <span style="color: red;">*</span>
   </label>
 
   <label>
     <input type="checkbox" name="code" required>
-    I agree to follow the team’s rules and code of conduct.
+    I agree to follow the team’s rules and code of conduct. <span style="color: red;">*</span>
   </label>
 
-  <button type="submit">Submit Registration</button>
+  <button type="submit" onclick="sendMail()">Submit Registration</button>
 </form>
 
-<!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
-    <p>Developed to connect students with the Sports Department</p>
-  </footer>
-   <script>
-    document.addEventListener('click', function (e) {
-    if (!dropdownWrapper.contains(e.target)) {
-      dropdownWrapper.classList.remove('active');
-    }
-  });
 
-  document.getElementById('logoutLink').addEventListener('click', function (event) {
-    event.preventDefault();
-    const confirmed = confirm("Are you sure you want to logout?");
-    if (confirmed) {
-      window.location.href = this.href;
+<!-- Scroll-to-Top Button -->
+<button id="scrollTopBtn" title="Go to top">
+  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="16" cy="16" r="16" fill="#333"/>
+    <path d="M16 10 L16 22" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+    <path d="M10 16 L16 10 L22 16" stroke="#fff" stroke-width="2" stroke-linecap="round" fill="none"/>
+  </svg>
+</button>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+<script>
+  // Scroll to top button
+  window.onscroll = function () {
+    const btn = document.getElementById("scrollTopBtn");
+    btn.style.display =
+      document.body.scrollTop > 200 || document.documentElement.scrollTop > 200
+        ? "flex"
+        : "none";
+  };
+
+  document.getElementById("scrollTopBtn").onclick = function () {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  };
+
+  // Toggle menu
+  function toggleMenu() {
+    const navLinks = document.getElementById("navLinks");
+    navLinks.classList.toggle("active");
+  }
+
+  const hamburger = document.querySelector(".hamburger");
+  if (hamburger) {
+    hamburger.addEventListener("click", toggleMenu);
+  }
+
+  // Supabase setup
+  const supabaseUrl = "https://mqvjbgnipsjygmpwidnq.supabase.co";
+  const supabaseKey =
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1xdmpiZ25pcHNqeWdtcHdpZG5xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNDkyNzQsImV4cCI6MjA2NzcyNTI3NH0.p-mZxDCirt9NY_3taGk7_mL-qK5zTR05jInt6FEWs4Y";
+  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+  document.getElementById("cricketForm").addEventListener("submit", async function (e) {
+  e.preventDefault();
+
+  const form = e.target;
+  const submitBtn = form.querySelector("button[type='submit']");
+  submitBtn.disabled = true;
+  submitBtn.textContent = "Submitting...";
+
+  const formData = new FormData(form);
+  const email = formData.get("email");
+  const studentNumber = formData.get("studentNumber");
+  const emergencyPhone = formData.get("emergencyPhone");
+
+  // Emergency phone validation
+  if (!/^0[678]\d{8}$/.test(emergencyPhone)) {
+    alert("❌ Emergency contact number must start with 07, 06, or 08 and be exactly 10 digits.");
+    submitBtn.disabled = false;
+    submitBtn.textContent = "Submit";
+    return;
+  }
+
+  // Check for duplicate email or student number
+  const { data: existing, error: checkError } = await supabase
+    .from("CricketRegistrations")
+    .select("id")
+    .or(`email.eq.${email},studentNumber.eq.${studentNumber}`);
+
+  if (checkError) {
+    alert("❌ Something went wrong while checking for duplicates.");
+    console.error(checkError);
+    submitBtn.disabled = false;
+    submitBtn.textContent = "Submit";
+    return;
+  }
+
+  if (existing && existing.length > 0) {
+    alert("❌ A user with this email or student number already exists.");
+    document.querySelector('input[name="email"]').value = "";
+    document.querySelector('input[name="studentNumber"]').value = "";
+    submitBtn.disabled = false;
+    submitBtn.textContent = "Submit";
+    return;
+  }
+
+  // Prepare data for insert
+  const data = {
+    fullname: formData.get("fullname"),
+    studentNumber,
+    dob: formData.get("dob"),
+    gender: formData.get("gender"),
+    contact: formData.get("contact"),
+    email,
+    year: formData.get("year"),
+    faculty: formData.get("faculty"),
+    experience: formData.get("experience"),
+    previousTeam: formData.get("previousTeam"),
+    role: formData.get("role"),
+    battingStyle: formData.get("battingStyle"),
+    bowlingStyle: formData.get("bowlingStyle"),
+    injuries: formData.get("injuries"),
+    training: formData.get("training"),
+    medical: formData.get("medical"),
+    conditionDetails: formData.get("conditionDetails"),
+    emergencyContact: formData.get("emergencyContact"),
+    emergencyPhone,
+    relationship: formData.get("relationship"),
+    agreement: formData.get("agreement") === "on",
+    code: formData.get("code") === "on",
+  };
+
+  // Try inserting
+  try {
+    const { data: inserted, error } = await supabase
+      .from("CricketRegistrations")
+      .insert([data])
+      .select();
+
+    if (error) {
+      console.error("Insert error:", error);
+      alert("❌ Could not submit. Please try again later.");
+    } else {
+      alert("✅ Thank you for your application! We will get back to you as soon as we have the final decision on your application.");
+      form.reset();
     }
-  });
-  </script>
+  } catch (err) {
+    console.error("Unexpected error:", err);
+    alert("Unexpected error: " + err.message);
+  }
+
+  submitBtn.disabled = false;
+  submitBtn.textContent = "Submit";
+});
+
+</script>
+
 </body>
 </html>
